# CMBcpp

./: .gitignore  CMakeLists.txt
cpplib/: Alm_Base.cpp  Alm_Base.hpp  CMakeLists.txt  Map_Base.cpp  Map_Base.hpp
lib/: CMakeLists.txt  correlation.cpp  correlation.hpp  functionals.cpp  functionals_p.cpp  functionals_p.hpp  monte.cpp  monte.hpp
pylib/: healpy_map.py  healpy_spectra.py  spectra.py  vis.py
test/: CMakeLists.txt
test/test1/: CMakeLists.txt
test/test1/ipynb/: Untitled.ipynb  empty_try.ipynb  harmonics.ipynb
test/test1/py/: vis.py  vis_2.py  vis_3.py  vis_4.py
test/test1/src/: main.cpp
test/test2/: CMakeLists.txt
test/test2/src/: main.cpp
test/test3/: CMakeLists.txt
test/test3/src/: main.cpp
test/test4/: Untitled.ipynb
test/test4/src/: main.cpp
tmpl/py/: vis.py
